# hysa-analysis

./: .gitignore  combinedSavings.json  earnings.py  graph.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
input/: combinedSavings.json
output/: output_month1.json  output_month10.json  output_month11.json  output_month2.json  output_month3.json  output_month4.json  output_month5.json  output_month6.json  output_month7.json  output_month8.json  output_month9.json  output_year1.json  output_year10.json  output_year11.json  output_year12.json  output_year13.json  output_year2.json  output_year3.json  output_year4.json  output_year5.json  output_year6.json  output_year7.json  output_year8.json  output_year9.json
src/: combineJSON.ts  idToJSON.ts  output.html  savings.html  savingsHtmlToJSON.ts  savingsIds.json
src/savings/: savings_104425.json  savings_106488.json  savings_10736.json  savings_107651.json  savings_10934.json  savings_110741.json  savings_114008.json  savings_121583.json  savings_121911.json  savings_122132.json  savings_122252.json  savings_12592.json  savings_128663.json  savings_129653.json  savings_132090.json  savings_132182.json  savings_133904.json  savings_13419.json  savings_13994.json  savings_14071.json  savings_14480.json  savings_145814.json  savings_14860.json  savings_153283.json  savings_153370.json  savings_15631.json  savings_163925.json  savings_16646.json  savings_168513.json  savings_17313.json  savings_17773.json  savings_17959.json  savings_180073.json  savings_181983.json  savings_185145.json  savings_18734.json  (+161 more)
