[tool.poetry]
name = "python-savings"
version = "0.1.0"
description = ""
authors = ["Alan Bixby <alanrbixby@gmail.com>"]
readme = "README.md"
packages = [{include = "python_savings"}]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
